# BSU

./: README.md
C++ Projects/WinApi labs/BinaryTreeOnArray/: BinaryTreeOnArray.sln  CMakeLists.txt
C++ Projects/WinApi labs/BinaryTreeOnArray/BinaryTreeOnArray/: BinaryTree.cpp  BinaryTree.h  BinaryTreeOnArray.vcxproj  BinaryTreeOnArray.vcxproj.filters  MyWindow.h  main.cpp
C++ Projects/WinApi labs/BinaryTreeOnArray/BinaryTreeOnArray/Debug/: BinaryTreeOnArray.exe.recipe  vc142.idb
C++ Projects/WinApi labs/BinaryTreeOnArray/BinaryTreeOnArray/Debug/BinaryTr.ae8344bc.tlog/: BinaryTreeOnArray.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C++ Projects/WinApi labs/BinaryTreeOnArray/Debug/: BinaryTreeOnArray.ilk
C++ Projects/WinApi labs/Set/: Set.sln
C++ Projects/WinApi labs/Set/Debug/: Set.ilk
C++ Projects/WinApi labs/Set/Set/: MVC.cpp  MVC.h  Set.cpp  (+6 more)
C++ Projects/WinApi labs/WinApiLIst/: WinApiLIst.sln
C++ Projects/first projects/task14/: task14.sln
C++ Projects/first projects/task_11/: task_11.sln
C++ Projects/first projects/task_15/: task_15.sln
C++ Projects/first projects/task_7/: task_7.sln
C++ Projects/first projects/task_8/: task_8.sln
C++ Projects/game 2048/mygame/: Buttons.h  GameTable.cpp  GameTable.h  buttons.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygame.pro
Java Projects/3 semester labs/FourthJavaLab/: output.txt
Java Projects/3 semester labs/JavaLab8/: example.txt  timeTable1.txt
Java Projects/Web Applications/Lab9/: studentList.txt
(+266 files in other folders)
